# ARS620-ROS-Driver

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  package.xml
include/ars620_driver/: ars620_decoder.h  canfd_frame_logger.h  cycle_assembler.h  processing_timing.h  usbcanfd_receiver.h
launch/: ars620_driver.launch
msg/: Ars620ConfigState.msg  Ars620OdTarget.msg  Ars620OdTargetArray.msg  Ars620RdiTarget.msg  Ars620RdiTargetArray.msg  Ars620SystemStatus.msg
scripts/: raw_canfd_csv_to_mf4.py
src/: ars620_decoder.cpp  ars620_driver_node.cpp  canfd_frame_logger.cpp  cycle_assembler.cpp  processing_timing.cpp  usbcanfd_receiver.cpp
test/: fake_controlcanfd.cpp  test_ars620_decoder.cpp  test_canfd_frame_logger.cpp  test_processing_timing.cpp  test_raw_canfd_csv_to_mf4.py  test_vendor_receiver.cpp
